--- a/simple_api/Dockerfile
+++ b/simple_api/Dockerfile
@@ -1,6 +1,6 @@
 ARG VERSION="3.8-buster"
 FROM python:$VERSION
-LABEL maintainer="EAZYTraining" email="contact@eazytraining.fr"
+LABEL maintainer="Hrubech HOMBESSA" email="hrubechhombessa@gmail.com"
 RUN apt update -y && apt install python3-dev libsasl2-dev libldap2-dev libssl-dev -y 
 COPY requirements.txt student_age.py /
 RUN pip3 install -r /requirements.txt
