--- a/docker-compose-registry.yml
+++ b/docker-compose-registry.yml
@@ -1,11 +1,10 @@
-version: '3.3'
 services:
-  pozos-registry:
+  student-registry:
     image: registry:2.8.1
-    container_name: pozos-registry
+    container_name: student-registry
     restart: always
-    ports: 
-      - "5000:5000"
+    # ports: 
+    #  - "5000:5000"
     volumes:
       - /opt/docker/registry:/var/lib/registry
       - ./registry/auth:/auth
@@ -17,24 +16,24 @@ services:
     command:
       - /bin/sh
       - -c
-      - 'apk add --no-cache apache2-utils && htpasswd -Bbn pozos change-me > /auth/htpasswd && registry serve /etc/docker/registry/config.yml'
+      - 'apk add --no-cache apache2-utils && htpasswd -Bbn pozos password > /auth/htpasswd && registry serve /etc/docker/registry/config.yml'
     networks:
-      - pozos_reg_network
+      - registry_network
 
   frontend-reg:
     image: joxit/docker-registry-ui:2
     container_name: frontend-reg
     depends_on:
-      - pozos-registry
+      - student-registry
     ports: 
       - "8080:80"
     environment:
-      - NGINX_PROXY_PASS_URL=http://pozos-registry:5000
+      - NGINX_PROXY_PASS_URL=http://student-registry:5000
       - DELETE_IMAGES=true
-      - REGISTRY_TITLE=Pozos
+      - REGISTRY_TITLE=Student
       - SINGLE_REGISTRY=true
     networks:
-      - pozos_reg_network
+      - registry_network
 
 networks:
-  pozos_reg_network:
+  registry_network:
