--- a/docker-compose-registry.yml
+++ b/docker-compose-registry.yml
@@ -16,7 +16,7 @@ services:
     command:
       - /bin/sh
       - -c
-      - 'apk add --no-cache apache2-utils && htpasswd -Bbn pozos password > /auth/htpasswd && registry serve /etc/docker/registry/config.yml'
+      - 'apk add --no-cache apache2-utils && htpasswd -Bbn admin password > /auth/htpasswd && registry serve /etc/docker/registry/config.yml'
     networks:
       - registry_network
 
